cmake_minimum_required(VERSION 2.8)
set(CPACK_RESOURCE_FILE_LICENSE "${CMAKE_SOURCE_DIR}/LICENSE")
set(CPACK_RESOURCE_FILE_README "${CMAKE_SOURCE_DIR}/README")
project(lan_router C CXX)

add_definitions("-Wall -g -O2")
set(DPPATH "/usr/local/lib")
add_subdirectory(src)
add_subdirectory(lib)
add_subdirectory(script)
add_subdirectory(conf)
