cmake_minimum_required(VERSION 2.8)

##install
#INSTALL(FILES countryip.sh DESTINATION script PERMISSIONS OWNER_WRITE OWNER_READ OWNER_EXECUTE)
#INSTALL(FILES firewall_BLACKLIST.sh DESTINATION script PERMISSIONS OWNER_WRITE OWNER_READ OWNER_EXECUTE)
#INSTALL(FILES firewall.sh DESTINATION script PERMISSIONS OWNER_WRITE OWNER_READ OWNER_EXECUTE)
INSTALL(FILES firewall.sh firewall_BLACKLIST.sh countryip.sh DESTINATION /root/script PERMISSIONS OWNER_WRITE OWNER_READ OWNER_EXECUTE)
